--- a/index.html
+++ b/index.html
@@ -16,10 +16,39 @@
 </head>
 
 <body>
-    <h1>Hey</h1>
-    <p>ca boom ?</p>
+    <header>
+        <nav class="header-navigation">
+            <section class="nav-logo-block">Heros League</section>
+            <section class="nav-bar">
+                <ul class="nav-btn">
+                    <li class="nav-btn-item">Services</li>
+                    <li class="nav-btn-item">Nos Héros</li>
+                    <li class="nav-btn-item">Témoignages</li>
+                    <li class="nav-btn-item">Sauvez-moi !</li>
+                </ul>
+            </section>
+        </nav>
+        <section class="header-image-hp">
+            <h1>Heros League</h1>
+            <p class="tag-line"><strong>Des gens un peu spéciaux, pour des problèmes pas tout à fait normaux</strong>
+            </p>
+        </section>
+    </header>
 
-    ooohhhh bla bla
+    <main>
+
+
+
+
+    </main>
+
+    <footer>
+
+
+
+
+
+    </footer>
 
 </body>
 
